Update the doc related to the DocumentDB databases

--- a/docs/hols/04.Lifts.md
+++ b/docs/hols/04.Lifts.md
@@ -41,6 +41,8 @@ Shows open/closed status.
 
     ![](img/image48.jpg)
 
+    ![](img/image5.png)
+
 1.	Click on `Query`.
 
     ![](img/image49.jpg)
@@ -49,7 +51,9 @@ Shows open/closed status.
 
     I look at the query.
 
-    I'm storing this in BLOBs. We will have all of the location history.
+    I'm storing this in BLOBs and in a DocumentDB databases. 
+
+    ![](img/image5.png)
 
 1.	Open the Visual Studio Cloud Explorer.
 
@@ -59,7 +63,7 @@ Shows open/closed status.
 
 1.	Open the Storage Service.
 
-1.	Open the blob and tables to check the outputs of the Stream Analytics services.
+1.	Open the blob to check the outputs of the Stream Analytics services.
 
     ![](img/image51.jpg)
 
@@ -76,15 +80,19 @@ Shows open/closed status.
     So what we're saying is, is that we're quitting the location events data stream.
     In stream analytics, we support pulling in reference data. In this case, my reference data set is the locations of all of the bases of the chair lifts.
 
-1.	View the content of liftlines table.
+1.	Now, view the content of Document databases.
 
-    ![](img/image54.jpg)
+1.	Go to the Azure Portal and check on the DocumentDB service.
 
-    ![](img/image55.jpg)
+    ![](img/image2.png)
+
+    ![](img/image3.png)
+
+1.	Click on the Query Explorer.
 
 1.	View the content of liftlinearchive table.
 
-    ![](img/image56.jpg)
+    ![](img/image4.png)
 
 1.	Click on SkiResort.API.
 
