--- a/docs/hols/01.XamarinTour.md
+++ b/docs/hols/01.XamarinTour.md
@@ -96,6 +96,8 @@ For those of us who don't ski, this app is pretty straightforward. At pretty muc
 
 1.	[Check Xamarin System Requeriments](https://developer.xamarin.com/guides/cross-platform/getting_started/requirements/)
 
+1.	Download and install [Visual Studio for Mac] (https://www.visualstudio.com/vs/visual-studio-mac/)
+
 1.	Download and install [Remoted iOS Simulator (for Windows)](https://developer.xamarin.com/guides/cross-platform/windows/ios-simulator/) if you want to test the iOS application.
 
     > NOTE: Remoted iOS Simulator requires a Visual Studio Enterprise license.
