Use PowerBI online to show a report

--- a/docs/setup/09.Xamarin.md
+++ b/docs/setup/09.Xamarin.md
@@ -30,6 +30,6 @@
 
     > NOTE: Remoted iOS Simulator requires a Visual Studio Enterprise license.
 
-<a href="..\..\README.md">Next</a>
+<a href="10.PowerBI.md">Next</a>
 
 
