--- a/docs/setup/01.CreateAzureResources.md
+++ b/docs/setup/01.CreateAzureResources.md
@@ -14,7 +14,7 @@
 
 1.	Click on the Skiresort.parameters.json file.
 
-1.	By default, Stream Analytics uses a free pricing tier (Shared cluster). You can only create one Search service at the free pricing tier. Change to “basic” or “standard” if you already have a free search service in your azure subscription.
+1.	By default,Azure Search uses a free pricing tier (Shared cluster). You can only create one Search service at the free pricing tier. Change to “basic” or “standard” if you already have a free search service in your azure subscription.
 
     ![](img/image4.jpg)
 
