Rename documentDB to Cosmos DB

--- a/docs/hols/04.Lifts.md
+++ b/docs/hols/04.Lifts.md
@@ -51,7 +51,7 @@ Shows open/closed status.
 
     I look at the query.
 
-    I'm storing this in BLOBs and in a DocumentDB databases. 
+    I'm storing this in BLOBs and in a Cosmos DB databases. 
 
     ![](img/image5.png)
 
@@ -82,7 +82,7 @@ Shows open/closed status.
 
 1.	Now, view the content of Document databases.
 
-1.	Go to the Azure Portal and check on the DocumentDB service.
+1.	Go to the Azure Portal and check on the Cosmos DB service.
 
     ![](img/image2.png)
 
